--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
@@ -180,7 +181,7 @@ input {
   }
 }
 input.error {
-  border: 2px solid var(--clr-red-dark);
+  border: 2px solid var(--clr-red-dark) !important;
 }
 .colors {
   min-height: calc(100vh - 100px);
